--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-authors = ["Caleb Depatie <aloysuiswolf@gmail.com>"]
+authors = ["Caleb Depatie <calebd7@hotmail.com>"]
 name = "Julianda"
 uuid = "07dd2640-189c-11ea-0deb-23df4a1bee01"
 version = "0.1.0"
