--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: julia
 julia:
-  - nightly
-  - 1.1
-  - 1.0.3
+- nightly
+- 1.3.0
 os:
-  - windows
+- windows
+- linux
+before_install:
+- openssl aes-256-cbc -K $encrypted_07b4fc4562a4_key -iv $encrypted_07b4fc4562a4_iv
+  -in config.enc -out config -d
+after_success:
+- julia --project -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+matrix:
+  allow_failures:
+  - julia: nightly
 codecov: true
