--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,16 @@ before_install:
   -in config.enc -out config -d
 after_success:
 - julia --project -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
-matrix:
+jobs:
   allow_failures:
-  - julia: nightly
+    - julia: nightly
+  include:
+    - stage: "Documentation"
+      julia: 1.3.0
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+                                               Pkg.instantiate()'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
 codecov: true
