--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Julianda"
 uuid = "07dd2640-189c-11ea-0deb-23df4a1bee01"
 authors = ["Caleb Depatie <calebd7@hotmail.com>"]
-version = "0.9.0"
+version = "0.9.2"
 
 [deps]
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
@@ -10,6 +10,12 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+
+[compat]
+CodecZlib = "0.6.0"
+HTTP = "0.8.8"
+JSON3 = "0.1.13"
+YAML = "0.3.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
