--- a/.github/workflows/gitci.yml
+++ b/.github/workflows/gitci.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: '1.3.0'
+        julia-version: ['1.3.0']
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
