--- a/.github/workflows/gitci.yml
+++ b/.github/workflows/gitci.yml
@@ -8,12 +8,11 @@ jobs:
       matrix:
         julia-version: ['1.3.0']
         os: [ubuntu-latest, windows-latest, macOS-latest]
-
     steps:
-      - uses: actions/checkout@v1.0.0
+      - uses: actions/checkout@v2
       - name: "Set up Julia"
         uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.julia-version }}
-      - run: julia -e 'println("Hello, World!")'
-        shell: bash
+      - uses: julia-actions/julia-buildpkg@latest
+      - uses: julia-actions/julia-runtest@latest
