Renamed to OandaTrade.jl

--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
-name = "Julianda"
+name = "OandaTrade"
 uuid = "07dd2640-189c-11ea-0deb-23df4a1bee01"
-authors = ["Caleb Depatie <calebd7@hotmail.com>"]
+authors = ["Caleb Depatie <caleb.depatie@outlook.com@hotmail.com>"]
 version = "0.9.3"
 
 [deps]
